name:                blackjack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/blackjack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:   BlackJack.Types
                     
  default-extensions: NoImplicitPrelude,OverloadedStrings
  -- other-extensions
  build-depends: base >= 4.7 && < 5
                ,text
                ,basic-prelude
                ,stm
                ,network
                ,reactive-banana
                ,safe
                ,random
                ,MissingH
                ,conduit-combinators
                ,conduit
                ,conduit-extra
                ,bytestring
                ,stm-conduit
                ,containers
                ,word8
                ,async
                ,transformers

  default-language:    Haskell2010

executable blackjack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blackjack
  default-language:    Haskell2010

test-suite blackjack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blackjack
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blackjack
